--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -25,7 +25,7 @@
       <h2>Patient Resource</h2>
       <table>
         <tr>
-          <th>First Name:</th>
+          <th>First Names:</th>
           <td id='fname'></td>
         </tr>
         <tr>
