--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -26,7 +26,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': '562f9de6-d10f-49d7-9f27-371dd12e52d7',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
